--- a/style.css
+++ b/style.css
@@ -4,3 +4,56 @@
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
 }
+
+:root {
+    font-size: 62.5%;
+    --resultados-bg: linear-gradient(180deg, #75f 0%, #6943ff 0.01%, #2f2ce9 100%);
+    --media-bg: linear-gradient(180deg, #4d21c9 0%, rgba(37, 33, 201, 0.00) 100%, rgba(37, 33, 201, 0,00) 100%);
+    --white: #fff;
+    --light-blue: #cac9ff;
+}
+
+body {
+    font-size: 1.6rem;
+}
+
+.resultados {
+    padding-block: 2.4rem;
+    background: var(--resultados-bg);
+    text-align: center;
+    color: var(--white);
+}
+
+.resultados h1 {
+    font-size: 1.8ram;
+    color: var(--light-blue);
+    margin-bottom: 2.5rem;
+}
+
+.resultados div {
+    width: 14ram;
+    height: 14rem;
+    background: var(--media-bg);
+    margin-inline: auto;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 2.4rem;
+}
+
+.resultados div strong:nth-of-type(1) {
+    font-size: 5.6rem;
+    font-weight: 800;
+    line-height: 7.2rem;
+}
+
+.resultados div strong:nth-of-type(2) {
+    color: var(--light-blue);
+    
+}
+
+
+.resultados h2 {
+    
+}
