style: finish first section styles

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     background: var(--resultados-bg);
     text-align: center;
     color: var(--white);
+    border-radius: 0 0 3.2rem 3.2rem;
 }
 
 .resultados h1 {
@@ -55,5 +56,12 @@ body {
 
 
 .resultados h2 {
-    
+    font-size: 2.4rem;
+    margin-bottom: 1rem;
+}
+
+.resultados p {
+    max-width: 26rem;
+    margin-inline: auto;
+    color: var(--light-blue);
 }
